# hotel-ai-agent-for-sql

./: .env.example  .gitignore  AGENT_PLAN.md  README.md  docker-compose.yml  ingest.py  pyproject.toml
app/: agents.py  analyst.py  context.py  guardrails.py  logging_config.py  main.py  sql_connector.py  tools.py
db/: schema.sql
guardrails/: config.yml  prompts.yml
scripts/: test_agent_manual.py  test_connector_manual.py
static/: app.js  index.html  style.css
web/: package-lock.json
web/src/app/: layout.js  page.js
